# src/controllers/banner.controller.ts
@@ -6,6 +6,14 @@ import { FilterQuery, isValidObjectId } from "mongoose";
 
 export default {
   async create(req: IReqUser, res: Response) {
+    /**
+     #swagger.tags = ['Banners']
+     #swagger.security = [{ "bearerAuth": [] }]
+     #swagger.requestBody = {
+     required: true,
+     schema: {$ref: "#/components/schemas/CreateBannerRequest"}
+     }
+     */
     try {
       await bannerDao.validate(req.body);
       const result = await BannerModel.create(req.body);
